tests/ui/parse/impl_fn_without_body.rx
//@ spec: RXS-0016
impl Euler { fn nope(); } //~ ERROR RX0008
